# notice_ai_agent

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  example_emails.py  pyproject.toml
.github/workflows/: ci.yaml
.hooks/: ensure-init
chains/: notice_email_extraction.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
scripts/: add_init_files.py
system_design/: langchain_pipeline.puml
tests/test_init_files/: __init__.py  test_add_init_files.py
tests/test_models/: test_notice_email_extraction.py
tests/test_validations/: test_date_validations.py  test_numeric_validations.py  test_text_validations.py
